--- a/style.scss
+++ b/style.scss
@@ -3,16 +3,19 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
+    background: #131424;
 }
 
 * {
     box-sizing: border-box;
 }
 
+// HEADER
+
 header {
     width: 100%;
     height: 100vh;
-    background-image: url("/assets/helmet-mask.jpg");
+    background-image: url("/assets/masqerade-mask.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Playfair Display', serif;
@@ -112,6 +115,58 @@ header {
         p {
             font-family: 'Playfair Display', serif;
             font-size: 30px;
+        }
+    }
+}
+
+
+// ADVENTURE
+
+#adventure {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+
+    align-items: center;
+
+    .container-compass img {
+        background-repeat: no-repeat;
+        transform: translate3d(-50%, 0, 0)
+    }
+
+    .container-text {
+        width: 30%;
+
+        span {
+            color: #7996af;
+            font-family: 'Roboto', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        h1 {
+            color: white;
+            font-size: 6em;
+            font-weight: 300;
+            font-family: 'Playfair Display', serif;
+        }
+
+        p {
+            font-size: 19px;
+            color: white;
+            font-family: 'Roboto', sans-serif;
+            line-height: 30px;
+        }
+    }
+
+    .container-image {
+        width: 60%;
+        height: 80vh;
+        margin-right: 0;
+
+        img {
+            background-size: cover;
+            width: 100%;
         }
     }
 }
