--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  background: #131424;
 }
 
 * {
@@ -13,7 +14,7 @@ body {
 header {
   width: 100%;
   height: 100vh;
-  background-image: url("/assets/helmet-mask.jpg");
+  background-image: url("/assets/masqerade-mask.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   font-family: 'Playfair Display', serif;
@@ -128,5 +129,58 @@ header h1 {
 .experiences-partners .how-we-work p {
   font-family: 'Playfair Display', serif;
   font-size: 30px;
+}
+
+#adventure {
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#adventure .container-compass img {
+  background-repeat: no-repeat;
+  -webkit-transform: translate3d(-50%, 0, 0);
+          transform: translate3d(-50%, 0, 0);
+}
+
+#adventure .container-text {
+  width: 30%;
+}
+
+#adventure .container-text span {
+  color: #7996af;
+  font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+#adventure .container-text h1 {
+  color: white;
+  font-size: 6em;
+  font-weight: 300;
+  font-family: 'Playfair Display', serif;
+}
+
+#adventure .container-text p {
+  font-size: 19px;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  line-height: 30px;
+}
+
+#adventure .container-image {
+  width: 60%;
+  height: 80vh;
+  margin-right: 0;
+}
+
+#adventure .container-image img {
+  background-size: cover;
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
